[package]
name = "dora"
version = "0.0.1"
authors = ["Dominik Inführ <dominik.infuehr@gmail.com>"]
build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
rustc-serialize = "*"
docopt = "*"
byteorder = "*"
libc = "*"
time = "*"

[dependencies.capstone]
git = "https://github.com/ebfe/rust-capstone.git"

# need for -fno-omit-frame-pointer
[profile.release]
debug = true
