[package]
name = "core-parser"
version = "0.0.2"
authors = ["Simon Ochsenreither <simon@ochsenreither.de>", "Dominik Inführ <dominik.infuehr@gmail.com>"]
description = "The Core programming language -- Parser"
homepage = "https://github.com/core-lang/core"
repository = "https://github.com/core-lang/core"
license = "MPL-2"
edition = "2021"

[dependencies]
parking_lot = "*"
